--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="manifest" href="/manifest.json">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table.min.css" />
     <script src="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table.min.js"></script>
-
+    <!---    
+        -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kalam&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/">
@@ -30,7 +32,7 @@
     </header>
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <!-- Navbar content -->
             <a class="navbar-brand" href="#">Home</a>
@@ -40,7 +42,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a id="citation-tab" class="nav-link" aria-current="page" href="#citation_list">Citation List</a>
+                        <a class="nav-link" aria-current="page" href="#citation_list" onclick="toggleElement('citation_list')" id="citation-tab">Citation List</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#apa6formats" onclick="toggleElement('apa6formats')">APA 6 Formats</a>
@@ -59,6 +61,7 @@
 
     <main class="main">
         <section id="citation_list">
+            <br>
             <div class="table-responsive">
                 <div class="table-title">
                     <div class="container-fluid">
@@ -69,101 +72,53 @@
                         </div>
                     </div>
                 </div>
-                <table id="table" class="table datatable table-borderless table-hover" data-detail-formatter="rowFormatter" data-mdb-loading="true" data-toggle="table" data-url="json/data.json" data-show-pagination-switch="false">
-                    <thead class="">
+                <table id="table" class="table datatable table-borderless table-hover" data-detail-formatter="rowFormatter" data-mdb-loading="true" data-toggle="table" data-show-pagination-switch="false" data-url="json/data.json">
+                    <thead class="navbar-dark bg-success">
                         <tr>
-                            <th data-formatter="ActionFormatter" data-toggle="tooltip"></th>
-                            <th data-field="type">TYPE</th>
-                            <th data-field="apa6">APA6</th>
-                            <th data-field="link" data-formatter="LinkFormatter">LINK</th>
+                            <th data-field="type"><span class="ml-2">TYPE</span></th>
+                            <th data-field="apa6"><span class="ml-2">APA6</span></th>
+                            <th data-field="link" data-formatter="LinkFormatter"><span class="ml-2">LINK</span></th>
+                            <th data-formatter="ActionFormatter" data-toggle="tooltip"><span class="ml-4">ACTION</span></th>
                         </tr>
                     </thead>
                 </table>
                 <!---
                 <div class="btn-group" role="group" aria-label="Basic example">
-                    <a class="btn btn-primary active" aria-current="page"><i class="fa-solid fa-plus"></i> Add</a>
-                    <a class="btn btn-primary"><i class="fa-solid fa-scissors"></i> Copy</a>
-                    <a class="btn btn-primary"><i class="fa-solid fa-pen"></i> Edit</a>
-                    <a class="btn btn-primary"><i class="fa-solid fa-trash"></i> Delete</a>
+                    <a class="btn btn-primary active" aria-current="page"><i class="fa-solid fa-plus"></i> Add</a>                    
                 </div>
                 -->
-                <script>
-                    function LinkFormatter(value, row, index) {
-                        return "<a href='" + row.link + "'>Link</a>";
-                    }
-
-                    function ActionFormatter(value, row, index) {
-                        return `<div class="btn-group" role="group" aria-label="Basic example">
-                        <a class="btn btn-primary active" aria-current="page"><i class="fa-solid fa-plus"></i></a>                        
-                    </div>`;
-                    }
-                </script>
+                <script src="/js/column_formatters.js" async></script>
             </div>
         </section>
 
-        <section id="citation_book" class="d-none d-print-none">
-            <h3>Book Citation Entry</h3>
-            <form>
-                <div class="row g-2">
-                    <div class="col-md">
-                        <div class="form-floating mb-3">
-                            <label for="Author" class="form-label">Author</label>
-                            <input id="Author" type="text" class="form-control">
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="form-floating mb-3">
-                            <label for="Title" class="form-label">Book title</label>
-                            <input id="Title" type="text" class="form-control">
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="form-floating mb-3">
-                            <label for="City" class="form-label">City of publication</label>
-                            <input id="City" type="text" class="form-control">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                </div>
-            </form>
+        <section id="citation_book" class="d-print-none">
         </section>
 
-        <section id="citation_journal" class="d-none d-print-none">
-            <h3>Journal Citation Entry</h3>
-            <form>
-                <div class="row g-2">
-                    <div class="col-md">
-                        <div class="form-floating mb-3">
-                            <label for="Author" class="form-label">Author</label>
-                            <input id="Author" type="text" class="form-control">
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="form-floating mb-3">
-                            <label for="Title" class="form-label">Book title</label>
-                            <input id="Title" type="text" class="form-control">
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="form-floating mb-3">
-                            <label for="City" class="form-label">City of publication</label>
-                            <input id="City" type="text" class="form-control">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                </div>
-            </form>
+        <section id="citation_journal" class="d-print-none">
         </section>
 
+        <section id="citation_movie" class="d-print-none">
+        </section>
+
+        <section id="citation_website" class="d-print-none">
+        </section>
+
+        <section id="apa6formats" class="" role="tabpanel" aria-labelledby="citation-tab">
+            <br>
+            <h3>APA 6 Formats</h3>
+            <table id="apaformats" class="table datatable table-borderless table-hover" data-detail-formatter="rowFormatter" data-mdb-loading="true" data-toggle="table" data-show-pagination-switch="false" data-url="json/cite_format.json">
+                <thead class="navbar-dark bg-success">
+                    <tr>
+                        <th data-field="type">TYPE</th>
+                        <th data-field="apa6">APA 6 FORMAT</th>
+                        <th data-field="link" data-formatter="LinkFormatter">LINK</th>
+                    </tr>
+                </thead>
+            </table>
+            <script src="/js/column_formatters.js" async></script>
+        </section>
     </main>
-    <section id="apa6formats" class="" role="tabpanel" aria-labelledby="citation-tab">
 
-        <h3>APA 6 Formats</h3>
-        ... Books: <code>Author, Initial. (Year). Book title. City of publication, Country/State: Publisher.</code>
-        <br>Websites: <code>Author, A. (date). Title of document [Format description]. Retrieved from http://xxx</code>
-        <br>Films: <code>Scorsese, M. (Producer), & Lonergan, K. (Writer/Director). (2000). You can count on me [Motion picture]. United States: Paramount Pictures.</code>
-
-    </section>
 
     <div class="dialog-container">
     </div>
