adding Bib2JSON

--- a/book.html
+++ b/book.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="utf-8">
-
     <link rel="stylesheet" type="text/html" href="/bootstrap/css/bootstrap.min.css">
 </head>
 
@@ -11,31 +10,7 @@
 
     <h3>Book Citation Entry</h3>
 
-    <form>
-        <div class="row g-2">
-            <div class="col-md">
-                <div class="form-floating mb-3">
-                    <label for="Author" class="form-label">Author</label>
-                    <input id="Author" type="text" class="form-control">
-                </div>
-            </div>
-            <div class="col-md">
-                <div class="form-floating mb-3">
-                    <label for="Title" class="form-label">Book title</label>
-                    <input id="Title" type="text" class="form-control">
-                </div>
-            </div>
-            <div class="col-md">
-                <div class="form-floating mb-3">
-                    <label for="City" class="form-label">City of publication</label>
-                    <input id="City" type="text" class="form-control">
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-        </div>
-    </form>
-
-    <script type="text/html" src="/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script type="text/html" src="/js/convert.js"></script>
     <!---    
 -->
 
