--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/fonts/fontawesome/css/all.css">
+
+
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table.min.css" />
@@ -18,11 +21,12 @@
         -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kalam&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="/">
+
     <!---    
+        <link rel="stylesheet" type="text/html" href="/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/">
     -->
-    <link rel="stylesheet" href="/fonts/fontawesome/css/all.css">
-    <link rel="stylesheet" type="text/html" href="/bootstrap/css/bootstrap.min.css">
+
     <link rel="stylesheet" type="text/css" href="styles/inline.css">
 </head>
 
@@ -32,7 +36,9 @@
     </header>
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-light bg-light static-top bg-primary">
+        <!-- navbar-expand-lg navbar-dark 
+            --->
         <div class="container-fluid">
             <!-- Navbar content -->
             <a class="navbar-brand" href="#">Home</a>
@@ -95,26 +101,58 @@
         </section>
 
         <section>
-            <div class="modal fade" id="citation_book" tabindex="-1" aria-labelledby="modalBookCitation" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="modalBookCitation">Book Citation</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </section>
+
+        <section id="citation_book" class="d-print-none">
+
+
+            <div class="m-4">
+                <form>
+                    <div class="row g-2">
+                        <div class="col-md">
+                            <div class="form-floating mb-3">
+                                <label for="Author" class="form-label">Author</label>
+                                <input id="Author" type="text" class="form-control">
+                            </div>
                         </div>
-                        <div class="modal-body">
-                            ...
+                        <div class="col-md">
+                            <div class="form-floating mb-3">
+                                <label for="Title" class="form-label">Book title</label>
+                                <input id="Title" type="text" class="form-control">
+                            </div>
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
+                        <div class="col-md">
+                            <div class="form-floating mb-3">
+                                <label for="City" class="form-label">City of publication</label>
+                                <input id="City" type="text" class="form-control">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+                </form>
+
+                <div class="d-flex">
+                    <button type="button" id="Model-Event_Search" class="btn btn-lg btn-primary">Google Book API Search</button>
+                </div>
+                <div id="Modal-GoogleBook" class="modal fade" tabindex="-1">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Google Books API Search</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p><input id="searchFor" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" required>
+                                    <p class="text-secondary"><small></small></p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-primary">Search</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-
-        <section id="citation_book" class="d-print-none">
         </section>
 
         <section id="citation_journal" class="d-print-none">
@@ -124,6 +162,27 @@
         </section>
 
         <section id="citation_website" class="d-print-none">
+        </section>
+
+        <section>
+            <div id="Modal-Confirmation" class="modal fade" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Confirmation</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Do you want to save changes to this document before closing?</p>
+                            <p class="text-secondary"><small>If you don't save, your changes will be lost.</small></p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section id="apa6formats" class="" role="tabpanel" aria-labelledby="citation-tab">
