--- a/landing.html
+++ b/landing.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Sushi Citations</title>
     <link rel="icon" type="image/x-icon" href="/images/logo.svg" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
