--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Sushi Citations</title>
-    <link rel="icon" type="image/x-icon" href="/images/logo.svg">
-    <link rel="manifest" href="/manifest.json">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/logo.svg" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 
-    <link rel="stylesheet" href="/fonts/fontawesome/css/all.css">
+    <link rel="stylesheet" href="/fonts/fontawesome/css/all.css" />
 
-
-    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table.min.css" />
@@ -20,21 +24,20 @@
     <!---    
         -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kalam&display=swap" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
     <!---    
         <link rel="stylesheet" type="text/html" href="/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="/">
     -->
 
-    <link rel="stylesheet" type="text/css" href="styles/inline.css">
+    <link rel="stylesheet" type="text/css" href="styles/inline.css" />
 </head>
 
 <body>
     <header class="header">
         <h1 class="header text-center">Sushi Citations</h1>
     </header>
-
 
     <nav class="navbar navbar-light bg-light static-top bg-primary">
         <!-- navbar-expand-lg navbar-dark 
@@ -43,125 +46,86 @@
             <!-- Navbar content -->
             <a class="navbar-brand" href="#">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
+          <span class="navbar-toggler-icon"></span>
+        </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Add Citation
-                        </a>
-                        <ul id="navList" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        </ul>
+                Add Citation
+              </a>
+                        <ul id="navList" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"></ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#citation_list" onclick="toggleElement('citation_list')" id="citation-tab">Citation List</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#apa6formats" onclick="toggleElement('apa6formats')">APA 6 Formats</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#blogposts" onclick="toggleElement('blogposts')">Blog Posts</a>
-                    </li>
-                </ul>
-            </div>
+                        <a class="nav-link" aria-current="page" href="#apa6formats" onclick="toggleElement('apa6formats')">APA 6 Formats</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="#blogposts"
+                onclick="toggleElement('blogposts')"
+                >Blog Posts</a
+              >
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
-    <main class="main">
-        <section id="citation_list">
-            <br>
-            <div class="table-responsive">
-                <div class="table-title">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="#">Citation List Search</a>
-                        <div class="d-flex">
-                            <input id="searchFor" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" required>
-                            <button class="btn btn-outline-success" type="button" onclick="updateBookTable(document.getElementById('searchFor').value)">Search</button>
-                        </div>
-                    </div>
-                </div>
-                <table id="table" class="table datatable table-borderless table-hover" data-detail-formatter="rowFormatter" data-mdb-loading="true" data-toggle="table" data-show-pagination-switch="false" data-url="json/data.json">
-                    <thead class="navbar-dark bg-success">
-                        <tr>
-                            <th data-field="type"><span class="ml-2">TYPE</span></th>
-                            <th data-field="apa6"><span class="ml-2">APA6</span></th>
-                            <th data-field="link" data-formatter="LinkFormatter"><span class="ml-2">LINK</span></th>
-                            <th data-formatter="ActionFormatter" data-toggle="tooltip"><span class="ml-4">ACTION</span></th>
-                        </tr>
-                    </thead>
-                </table>
-                <!---
-                <div class="btn-group" role="group" aria-label="Basic example">
-                    <a class="btn btn-primary active" aria-current="page"><i class="fa-solid fa-plus"></i> Add</a>                    
-                </div>
-                -->
-                <script src="/js/column_formatters.js" async></script>
-            </div>
-        </section>
-
-        <section>
-        </section>
-
-        <section id="citation_book" class="d-print-none">
-
-
+    <main class="main">    
+        <section id="citation" class="d-print-none">
+            <br />
+            <h3>Add Citation</h3>
             <div class="m-4">
                 <form>
                     <div class="row g-2">
-                        <div class="col-md">
-                            <div class="form-floating mb-3">
-                                <label for="Author" class="form-label">Author</label>
-                                <input id="Author" type="text" class="form-control">
-                            </div>
-                        </div>
-                        <div class="col-md">
-                            <div class="form-floating mb-3">
-                                <label for="Title" class="form-label">Book title</label>
-                                <input id="Title" type="text" class="form-control">
-                            </div>
-                        </div>
-                        <div class="col-md">
-                            <div class="form-floating mb-3">
-                                <label for="City" class="form-label">City of publication</label>
-                                <input id="City" type="text" class="form-control">
-                            </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                        </div>
+                        <button type="button" id="Modal-Search" class="btn btn-lg btn-secondary">API Search</button>
+                        <button type="submit" class="btn btn-primary">Submit</button>
                     </div>
                 </form>
+        </section>
 
-                <div class="d-flex">
-                    <button type="button" id="Model-Event_Search" class="btn btn-lg btn-primary">Google Book API Search</button>
-                </div>
-                <div id="Modal-GoogleBook" class="modal fade" tabindex="-1">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title">Google Books API Search</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                            </div>
-                            <div class="modal-body">
-                                <p><input id="searchFor" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" required>
-                                    <p class="text-secondary"><small></small></p>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                <button type="button" class="btn btn-primary">Search</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <section>
+            <div id="Modal-View" class="modal fade" tabindex="-1">                
             </div>
         </section>
 
-        <section id="citation_journal" class="d-print-none">
-        </section>
+        <section id="citation_list">
+            <br />
+            <div class="table-responsive">
+              <div class="table-title">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Citation List Search</a>
+                        <div class="d-flex">
+                            <input id="searchFor" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" required />
+                            <button class="btn btn-outline-success" type="button" onclick="updateBookTable(document.getElementById('searchFor').value)">
+                      Search
+                    </button>
+                        </div>
+            </div>
+        </div>
+        <table id="table" class="table datatable table-borderless table-hover" data-detail-formatter="rowFormatter" data-mdb-loading="true" data-toggle="table" data-show-pagination-switch="false" data-url="json/data.json">
+            <thead class="navbar-dark bg-success">
+                <tr>
+                    <th data-field="type"><span class="ml-2">TYPE</span></th>
+                    <th data-field="apa6"><span class="ml-2">APA6</span></th>
+                    <th data-field="link" data-formatter="LinkFormatter">
+                        <span class="ml-2">LINK</span>
+                    </th>
+                    <th data-formatter="ActionFormatter" data-toggle="tooltip">
+                        <span class="ml-4">ACTION</span>
+                    </th>
+                </tr>
+            </thead>
+        </table>
 
-        <section id="citation_movie" class="d-print-none">
-        </section>
-
-        <section id="citation_website" class="d-print-none">
+        <script src="/js/column_formatters.js" async></script>
+        </div>
         </section>
 
         <section>
@@ -186,7 +150,7 @@
         </section>
 
         <section id="apa6formats" class="" role="tabpanel" aria-labelledby="citation-tab">
-            <br>
+            <br />
             <h3>APA 6 Formats</h3>
             <table id="apaformats" class="table datatable table-borderless table-hover" data-detail-formatter="rowFormatter" data-mdb-loading="true" data-toggle="table" data-show-pagination-switch="false" data-url="json/cite_format.json">
                 <thead class="navbar-dark bg-success">
@@ -201,7 +165,7 @@
         </section>
 
         <section id="blogposts" class="" role="tabpanel" aria-labelledby="citation-tab">
-            <br>
+            <br />
             <h3>Blog Posts</h3>
             <table id="blogpost" class="table datatable table-borderless table-hover" data-detail-formatter="rowFormatter" data-mdb-loading="true" data-toggle="table" data-show-pagination-switch="false" data-url="json/blog_posts.json">
                 <thead class="navbar-dark bg-success">
@@ -214,21 +178,17 @@
             </table>
             <script src="/js/column_formatters.js" async></script>
         </section>
-    </main>
+        </main>
 
+        <div class="dialog-container"></div>
 
-    <div class="dialog-container">
-    </div>
+        <div class="loader"></div>
 
-    <div class="loader">
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!---
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <!---
     <script type="text/html" src="/bootstrap/js/bootstrap.bundle.min.js"></script>
     -->
-    <script src="app.js" async></script>
-
+        <script src="app.js" async></script>
 </body>
 
 </html>
