--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <title>Sushi Citations</title>
+    <!--
     <link rel="icon" type="image/x-icon" href="/images/logo.svg" />
     <link rel="manifest" href="/manifest.json" />
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
@@ -13,7 +15,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-
+-->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table.min.js"></script>
     <script type="text/javascript" src="/datatables/datatables.min.js"></script>
@@ -26,6 +28,7 @@
 
     <script src="/js/citation_book.js"></script>
     <!---    
+        
         -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kalam&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
@@ -80,7 +83,7 @@
     </nav>
 
     <main class="main">    
-        <section id="citation" class="d-print-none">
+        <section id="#citation" class="d-print-none">
             <br/>
             <h3>Add Citation</h3>
             <div class="m-4">
@@ -107,7 +110,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button class="btn btn-primary" data-bs-target="#Modal-View-Search" data-bs-toggle="modal" data-bs-dismiss="modal" onclick="showAlert()">Search</button>
+                    <button class="btn btn-primary" data-bs-target="#Modal-View-Search" data-bs-toggle="modal" data-bs-dismiss="modal" onclick="showAlert('modal-searchFor')">Search</button>
                 </div>
             </div>
         </div>
@@ -227,7 +230,7 @@
         <!---
     <script type="text/html" src="/bootstrap/js/bootstrap.bundle.min.js"></script>
     -->
-        <script src="app.js" async></script>
+        <script src="app.js"></script>
 </body>
 
 </html>
